<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16">

    <EditText
        android:id="@+id/edit_change_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_old"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_change_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_new"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_change_password_new_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true" />

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal">-->
    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/btn_change_password_cancel"/>-->
    <!--</LinearLayout>-->
</LinearLayout>